<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">V2EX</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">Sign in or Sign up?</string>
    <string name="title_activity_lastest">Lastest</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_hot">Hot</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="v2ex_logo">V2EX</string>
    <string name="v2ex_description">Community For Creative Worker</string>
    <string name="total_topics">Topics</string>
    <string name="total_members">Members</string>

    <string name="menu_share">Share</string>
    <string name="menu_hot">Hot</string>
    <string name="menu_all_nodes">All Nodes</string>
    <string name="menu_lastest">Lastest</string>
    <string name="menu_reply">Reply</string>

    <string name="last_modified_00"> Several Seconds Before</string>
    <string name="last_modified_01"> <xliff:g id="count">%1$s</xliff:g> Minutes Before</string>
    <string name="last_modified_02"> <xliff:g id="count">%1$s</xliff:g> Hours Before</string>
    <string name="last_modified_03"> Several Days Before</string>

    <string name="error_message"> Occur Error！ </string>

    <string name="reply_count"> <xliff:g id="count">%1$s</xliff:g> Replies</string>
</resources>
